# konzertmeister-3g

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
example/: Anwesenheiten - Probe.csv  Anwesenheiten - Probe.html  Anwesenheiten - Probe.md  Anwesenheiten - Probe.tex  Anwesenheiten - Probe.xlsx  export_attendences.html
konzertmeister_3g/: main.py
