[tool.poetry]
name = "konzertmeister-3g"
version = "0.1.0"
description = ""
authors = ["Jan Otto <kontakt@jc-otto.de>"]
readme = "README.md"

[tool.poetry.scripts]
konzertmeister-3g = "konzertmeister_3g.main:app"

[tool.poetry.dependencies]
python = "^3.7.1"
typer = {extras = ["all"], version = "^0.3.2"}
pandas = "^1.2.4"
pdfkit = "^0.6.1"
Jinja2 = "^3.0.1"
openpyxl = "^3.0.7"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
